bonus/dev/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  name: p3-deployment
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: p3-deployment
  template:
    metadata:
      labels:
        app: p3-deployment
    spec:
      containers:
        - image: wil42/playground:v1
          name: wil42
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
