bonus/dev/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-service
  namespace: dev
spec:
  ports:
    - port: 8888
  selector:
    app: p3-deployment
