bonus/dev/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p3-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p3-service
            port:
              number: 8888
